# cookiecutter-mcp

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manifest.json  pyproject.toml
{{cookiecutter.project_slug}}/server/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: test_server.py
